--- a/app/src/main/res/layout/recycler_view_archivo_list.xml
+++ b/app/src/main/res/layout/recycler_view_archivo_list.xml
@@ -2,18 +2,39 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:background="@color/black">
+
+
+    <FrameLayout
+        android:id="@+id/Frame"
+        android:layout_width="352dp"
+        android:layout_height="52dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <FrameLayout
+            android:id="@+id/line"
+            android:layout_width="match_parent"
+            android:layout_height="3dp"
+            android:background="@drawable/line">
+
+
+        </FrameLayout>
+    </FrameLayout>
 
     <ImageView
         android:id="@+id/iv_icono"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.042"
+        app:layout_constraintHorizontal_bias="0.029"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/Frame"
         app:srcCompat="@drawable/folder" />
 
     <TextView
@@ -22,7 +43,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:text="Nombre del Archivo"
-        android:textSize="18sp"
+        android:textColor="@color/white"
+        android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@+id/iv_icono"
         app:layout_constraintStart_toEndOf="@+id/iv_icono"
         app:layout_constraintTop_toTopOf="@+id/iv_icono"
@@ -33,8 +55,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:text="X elementos"
-        android:textSize="12sp"
+        android:text="X"
+        android:textColor="@color/gray"
+        android:textSize="8sp"
         app:layout_constraintBottom_toBottomOf="@+id/iv_icono"
         app:layout_constraintStart_toEndOf="@+id/iv_icono"
         app:layout_constraintTop_toTopOf="@+id/iv_icono"
@@ -44,11 +67,24 @@
         android:id="@+id/tv_fecha_creacion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:text="|   DD/MM/YYYY HH:MM a.m."
-        android:textSize="12sp"
+        android:layout_marginStart="4dp"
+        android:text="fecha"
+        android:textColor="@color/gray"
+        android:textSize="8sp"
+        app:layout_constraintStart_toEndOf="@+id/textView"
+        app:layout_constraintTop_toTopOf="@+id/textView" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:text="elementos  |"
+        android:textColor="@color/gray"
+        android:textSize="8sp"
         app:layout_constraintBottom_toBottomOf="@+id/tv_cantidad_elementos"
         app:layout_constraintStart_toEndOf="@+id/tv_cantidad_elementos"
         app:layout_constraintTop_toTopOf="@+id/tv_cantidad_elementos"
         app:layout_constraintVertical_bias="0.0" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
